[package]
name = "termcap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mqudsi/termcap/"
description = "Cross-platform, lightweight, and dependency-free termcap parser"
authors = [ "Mahmoud Al-Qudsi <mqudsi@neosmart.net>" ]
keywords = [ "termcap", "terminfo", "build-tools" ]
categories = [ "os" ]

[dependencies]
